# LinearGeneticProgramming

./: .gitignore  1  CMakeLists.txt  CONTRIBUTING.md  CSTYLE.md  Containerfile  Dockerfile  Makefile  README.md  TODO.md  clustering_example.py  clustering_example_simple.py  cppanalisys.txt  deap_shopping-4x100.csv  demo_main_lgp.py  dice-2x100.csv  docker-compose.yml  example.c  examples.py  profiling  psb2_benchmark.py  readme.md  runtest.bash  shopping4x100.csv  show_stats.py  simple_clustering_test.py  test_clustering_gc.py
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUIREMENT.md  PERFORMANCE_ISSUE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
DEAP/: benchmark.py
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: balls-3x100.csv  generate_figures.py  print_stat.py  vector-6x100.csv
lgp/: README.md  README.md.backup  __init__.py  base.py  creation.py  evolution.py  fitness.py  genetics.py  selection.py  setup.py  utils.py  vm.py
lgp/fitness/: __init__.py  advanced.py  classification.py  clustering.py  distances.py  interface.py  probabilistic.py  regression.py
src/: README.md  benchmarks.c  benchmarks.h  creation.c  creation.h  creations.c  creations.h  evolution.c  evolution.h  fitness.c  fitness.h  float_psb2.c  float_psb2.h  genetics.c  genetics.h  logger.c  logger.h  macros.h  main.c  mt19937.c  mt19937.h  operations.c  operations.h  prob.c  prob.h  psb2.c  psb2.h  selection.c  selection.h  selections.c  selections.h  vm.c  vm.h
src/fitness/: advanced.c  advanced.h  classification.c  classification.h  clustering.c  clustering.h  distances.c  distances.h  interface.c  interface.h  probabilistic.c  probabilistic.h  regression.c  regression.h
tests/: deap_snow-4x100.csv  deap_vector-6x100.csv  gen_graphs.py  print_graphs.py  shopping-4x100.csv  snow-4x100.csv  stats_on_psb2.py
